MDEV-29369: rpl.rpl_semi_sync_shutdown_await_ack fails regularly with Result content mismatch

This test was prone to failures for a few reasons, summarized below:

 1) MDEV-32168 introduced “only_running_threads=1” to
slave_stop.inc, which allowed the stop logic to bypass an
attempting-to-reconnect IO thread. That is, the IO thread could
realize the master shutdown in `read_event()`, and thereby call into
`try_to_reconnect()`. This would leave the IO thread up when the
test expected it to be stopped. The fix for this is two-part. First,
rather than stop the io thread, wait for it to realize the master
shutdown so it can turn itself off automatically. Second, change the
test configuration `master_retry_count` to 2 (default 10000) so it
waits a reasonable amount of time.

 2) On slow systems (or those running profiling tools, e.g. MSAN),
the waiting-for-ack transaction can complete before the system
processes the `SHUTDOWN WAIT FOR ALL SLAVES`. There was shutdown
preparation logic in-between the transaction and shutdown itself,
which contributes to this problem. This patch also moves this
preparation logic before the transaction, so there is less to do
in-between the calls.

 3) The MTR test configuration file started with
rpl_semi_sync_master_enabled=1; however, the test wasn’t set up for
this, leading to setup and cleanup transactions that would time out,
causing the test to run unnecessarily slowly. This patch removes
this default configuration.

 4) MDEV-32031 fix to change MTR restoration variables to user
variables

 5) Changed work-around for MDEV-28141 to use debug_sync instead
of sleep delay, as it was still possible to hit the bug on very
slow systems.

Reviewed By:
============
<TODO>