sql/semisync_slave.cc
@@ -17,6 +17,7 @@
 
 #include <my_global.h>
 #include "semisync_slave.h"
+#include "debug_sync.h"
 
 Repl_semi_sync_slave repl_semisync_slave;
 
@@ -115,7 +116,25 @@ int Repl_semi_sync_slave::slave_start(Master_info *mi)
 int Repl_semi_sync_slave::slave_stop(Master_info *mi)
 {
   if (get_slave_enabled())
+  {
+#ifdef ENABLED_DEBUG_SYNC
+  /*
+    DEBUG_SYNC won't work if the thread is killed, so reset the killed
+    state of the thread to restore it after debug_sync
+    Temporarily cache the killed state to restor
+  */
+  DBUG_EXECUTE_IF("delay_semisync_kill_connection_for_mdev_28141", {
+    killed_state old_killed= mi->io_thd->killed;
+    const char act[]= "now "
+                      "signal at_semisync_kill_connection "
+                      "wait_for continue_semisync_kill_connection";
+    DBUG_ASSERT(debug_sync_service);
+    DBUG_ASSERT(!debug_sync_set_action(mi->io_thd, STRING_WITH_LEN(act)));
+    mi->io_thd->set_killed(old_killed);
+  };);
+#endif
     kill_connection(mi->mysql);
+  }
 
   if (rpl_semi_sync_slave_status)
     rpl_semi_sync_slave_status= 0;
@@ -150,8 +169,6 @@ void Repl_semi_sync_slave::kill_connection(MYSQL *mysql)
                           "connection");
     goto failed_graceful_kill;
   }
-
-  DBUG_EXECUTE_IF("slave_delay_killing_semisync_connection", my_sleep(400000););
 
   kill_buffer_length= my_snprintf(kill_buffer, 30, "KILL %lu",
                                 mysql->thread_id);
